@@ -2847,7 +2847,6 @@ class GeminiClient(cmd.Cmd):
         self._go_to_gi(gi)
 
     ### Settings
-    @restricted
     def do_redirect(self,line):
         """Display and manage the list of redirected URLs. This features is mostly useful to use privacy-friendly frontends for popular websites."""
         if len(line.split()) == 1:
@@ -4159,6 +4158,29 @@ def main():
     gc = GeminiClient(restricted=args.restricted,synconly=args.sync)
     torun_queue = []
     
+    # Interactive if offpunk started normally
+    # False if started with --sync
+    # Queue is a list of command (potentially empty)
+    def read_config(queue,interactive=True):
+        rcfile = os.path.join(_CONFIG_DIR, "offpunkrc")
+        if os.path.exists(rcfile):
+            print("Using config %s" % rcfile)
+            with open(rcfile, "r") as fp:
+                for line in fp:
+                    line = line.strip()
+                    if ((args.bookmarks or args.url) and
+                        any((line.startswith(x) for x in ("go", "g", "tour", "t")))
+                        ):
+                        if args.bookmarks:
+                            print("Skipping rc command \"%s\" due to --bookmarks option." % line)
+                        else:
+                            print("Skipping rc command \"%s\" due to provided URLs." % line)
+                        continue
+                    # We always consider redirect
+                    # for the rest, we need to be interactive
+                    if line.startswith("redirect") or interactive:
+                        queue.append(line)
+        return queue
     # Act on args
     if args.tls_cert:
         # If tls_key is None, python will attempt to load the key from tls_cert.
@@ -4200,25 +4222,14 @@ def main():
             depth = int(args.depth)
         else:
             depth = 1
+        read_config(torun_queue, interactive=False)
+        for line in torun_queue:
+            gc.onecmd(line)
         gc.call_sync(refresh_time=refresh_time,depth=depth)
         gc.onecmd("blackbox")
     else:
         # We are in the normal mode. First process config file
-        rcfile = os.path.join(_CONFIG_DIR, "offpunkrc")
-        if os.path.exists(rcfile):
-            print("Using config %s" % rcfile)
-            with open(rcfile, "r") as fp:
-                for line in fp:
-                    line = line.strip()
-                    if ((args.bookmarks or args.url) and
-                        any((line.startswith(x) for x in ("go", "g", "tour", "t")))
-                        ):
-                        if args.bookmarks:
-                            print("Skipping rc command \"%s\" due to --bookmarks option." % line)
-                        else:
-                            print("Skipping rc command \"%s\" due to provided URLs." % line)
-                        continue
-                    torun_queue.append(line)
+        torun_queue = read_config(torun_queue,interactive=True)
         print("Welcome to Offpunk!")
         if args.restricted:
             print("Restricted mode engaged!")
