@@ -3,6 +3,7 @@
 ## 1.6 - Unreleased
 - A list can be added to a tour with "tour $LIST_NAME".
 - Check for timg > 1.3.2 to avoid dealing with old versions (bug reported by Valvin)
+- Redirect are now honoured also when --sync (bug #15, thanks kelbot)
 - Removed default redirection to libredd.it as the server seems down
 
 ## 1.5 - August 4th 2022
